force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleset__c/Apttus_Config2__OrderWorkflowRuleset__c.object-meta.xml
<CustomObject>
    <description>Represents a rule set that contains a set of rules to automate order workflow actions</description>
    <label>Order Workflow Ruleset</label>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Workflow Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>