force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleset__c/fields/Apttus_Config2__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Criteria__c</fullName>
    <description>The triggering criteria</description>
    <inlineHelpText>The triggering criteria</inlineHelpText>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>