force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleset__c/fields/Apttus_Config2__TriggerContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TriggerContextType__c</fullName>
    <description>The trigger context type</description>
    <inlineHelpText>The trigger context type</inlineHelpText>
    <label>Trigger Context Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
                <default>true</default>
                <label>Order</label>
            </value>
            <value>
                <fullName>Order Fulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>