force-app/main/default/objects/Apttus_Config2__OrderWorkflowRuleset__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The ruleset type</description>
    <inlineHelpText>The ruleset type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Execution</fullName>
                <default>true</default>
                <label>API Execution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>